Release 2.0.5 (pre-release)
===========================

Bugs fixed
----------

- Build with -framework used (OS X) will/should work properly


Release 2.0.4
=============

Bugs fixed
----------

- Added missing named parameter *wantfun* to method :meth:`Renvironment.get`
  (making it similar to :meth:`SexpEnvironment.get`)

- Leak in reference counting when creating SexpVector objects fixed
  (the symptom was a process growing in size when creating R vector from
  Python list or numpy arrays)

- `R CMD config LAPACK_LIBS` could return an empty string when R was compiled
  with the veclib framework, causing the setup.py script to raise an exception.
  setup.py now only print a message about an empty string returned from 
  R CMD config

- Numpy arrays with complex elements are now longer causing segfaults


Release 2.0.3
=============

New features
------------

- All callbacks are getting a get<callback> to complement the set<callback>.
  (# patch submitted by Nathaniel Smith) 

- :meth:`process_revents`, a wrapper for R_ProcessEvents 
  (# suggested by June Kim to help with issues related to interactive display on win32), 
  and for R_RunHandlers on UNIX-like systems 
  (# patch by Nathaniel Smith).

- :meth:`Sexp.__deepcopy__` to copy an object (calling Rf_Duplicate) 
  (# from a patch by Nathaniel Smith)

Changes
-------

:mod:`rpy2.rinterface`:

- the default for reading and writing the console are now using sys.stdin and sys.stdout 
  (# patch submitted by Nathaniel Smith)

- console IO callbacks (reading and writing) are complemented by 
  one to flush the console
  (# backport from 2.1-dev) 

- :meth:`Sexp.do_slot_assign` now creates the slot if missing
  (design-fix - # patch by Nathaniel Smith)

Bugs fixed
----------

- fixed problem with numpy interface with R boolean vectors. 
  They are now presented as 'i' rather than 'b' to numpy
  (# patch submitted by Nathaniel Smith)

- The mechanism for setting arbitrary callaback functions for console I/O 