@@ -43,6 +43,8 @@ class SexpEnvironmentTestCase(unittest.TestCase):
         ok = isinstance(sfit_R, rinterface.SexpClosure)
         self.assertTrue(ok)
 
+    def testGetEmptyString(self):
+        self.assertRaises(RRuntimeError, rinterface.globalEnv.get, "")
 
     def testGet_functionOnly_lookupError(self):
         # now with the function-only option
